# replicode

./: .gitignore  CMakeLists.txt  README.md  common_logger.cpp  common_logger.h  replicode_common.h
examples/: test.10.replicode  user.classes.replicode
examples/V1.2/: hello.world.replicode  pattern.replicode  pong.2.replicode  pong.replicode  std.replicode  test.1.replicode  test.2.replicode  user.classes.replicode
executor/: inifile.cpp  main.cpp  settings.h  settings.ini
r_code/: CMakeLists.txt  atom.cpp  image.tpl.h  object.cpp  object.h  r_code.cpp  utils.cpp  utils.h
r_comp/: CMakeLists.txt  decompiler.cpp  replistruct.cpp  segments.cpp
r_exec/: CMakeLists.txt  _context.cpp  ast_controller.cpp  auto_focus.cpp  context.cpp  cpp_programs.cpp  cst_controller.cpp  cst_controller.h  factory.cpp  g_monitor.cpp  group.cpp  init.cpp  init.h  mdl_controller.cpp  mem.cpp  mem.h  object.h  overlay.h  pattern_extractor.cpp  time_core.cpp  time_job.cpp  time_job.h
tests/compiler/: main.cpp
unity/: CMakeLists.txt  UnityMem.cpp  UnityMem.h  callbackstream.cpp  callbackstream.h  inifile.cpp  injection.cpp  main.cpp  r_code.i  r_comp.i  r_exec.i  swig_helpers.h  unity.cpp  unity.h  unity.i  visualizer.cpp
usr_operators/: auto_focus.cpp  usr_operators.cpp  usr_operators.h
usr_operators/Callbacks/: callbacks.cpp
usr_operators/Operators/: operators.cpp  operators.h
usr_operators/TestProgram/: test_program.cpp
